--- a/index.html
+++ b/index.html
@@ -9,21 +9,60 @@
 <body class="p-[1em]">
     <header>
         <nav class="flex justify-between mb-[3em]">
-            <img src="assets/logo.png" width="100"/>
-    
-            <div class="grid place-content-center">
-                <div class="w-12 h-1 bg-black rounded-full before:content-[''] before:absolute before:w-12 before:h-1 before:bg-black before:rounded-full before:-translate-y-3
-                    after:content-[''] after:absolute after:w-12 after:h-1 after:bg-black after:rounded-full after:-translate-y-3 before:-translate-y-2 after:translate-y-3"></div>
+            <img src="assets/logo.png" width="100" class="flex items-center"/>
+
+            <!--Menu burguer pour mobile-->
+            <div class="grid place-content-center lg:hidden sm:hidden">
+                <div
+                    class="w-12 h-1 bg-black rounded-full before:content-[''] before:absolute before:w-12 before:h-1 before:bg-black before:rounded-full before:-translate-y-3
+                    after:content-[''] after:absolute after:w-12 after:h-1 after:bg-black after:rounded-full after:-translate-y-3 before:-translate-y-2 after:translate-y-3">
+                </div>
+            </div>
+
+            <!-- Menu burgueur pour tablette -->
+            <div class="hidden md:flex md:justify-end md:gap-5 lg:hidden ">
+                <button class="bg-black p-[.5em] rounded-[5px] text-white items-center">Google Play Store</button>
+                <button class="bg-black p-[.5em] rounded-[5px] text-white items-center mr-[.5em]">App Store</button>
+                <div class="grid place-content-center items-center">
+                    <div
+                        class="w-12 h-1 bg-black rounded-full before:content-[''] before:absolute before:w-12 before:h-1 before:bg-black before:rounded-full before:-translate-y-3
+                        after:content-[''] after:absolute after:w-12 after:h-1 after:bg-black after:rounded-full after:-translate-y-3 before:-translate-y-2 after:translate-y-3">
+                    </div>
+                </div>
+            </div>
+
+            <!-- Menu pour desktop -->
+            <div class="hidden lg:flex justify-between w-full ml-[5em]">
+                <ul class="flex items-center gap-10">
+                    <a href="#">
+                        <li>Features</li>
+                    </a>
+                    <a href="#">
+                        <li>Pricing</li>
+                    </a>
+                    <a href="#">
+                        <li>Careers</li>
+                    </a>
+                    <a href="#">
+                        <li>Help</li>
+                    </a>
+                </ul>
+                <div class="flex gap-10 items-center">
+                    <button class="bg-black p-[.5em] rounded-[5px] text-white">Google Play Store</button>
+                    <button class="bg-black p-[.5em] rounded-[5px] text-white">App Store</button>
+                </div>
             </div>
         </nav>
     </header>
     <main>
         <div>
             <h1 class="font-bold text-3xl"> The easiest way to manage projects</h1>
-            <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know what to do, why it matters, and how to get it done.</p>
+            <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know what to do,
+                why it matters, and how to get it done.</p>
         </div>
     </main>
     <footer></footer>
-    
+
 </body>
+
 </html>
