--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="p-[1em]">
     <header>
         <nav class="flex justify-between mb-[3em]">
-            <img src="assets/logo.png" width="150" class="flex items-center" />
+            <img src="assets/logo.png" width="200" class="flex items-center" />
 
             <!--Menu burguer pour mobile-->
             <div class="grid place-content-center lg:hidden sm:hidden">
@@ -46,7 +46,7 @@
 
             <!-- Menu pour desktop -->
             <div class="hidden lg:flex justify-between w-full ml-[5em]">
-                <ul class="flex items-center gap-10">
+                <ul class="flex items-center gap-10 font-bold">
                     <a href="#">
                         <li>Features</li>
                     </a>
