--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="p-[1em]">
     <header>
         <nav class="flex justify-between mb-[3em]">
-            <img src="assets/logo.png" width="200" class="flex items-center" />
+            <img src="assets/logo.png" class="flex items-center" />
 
             <!--Menu burguer pour mobile-->
             <div class="grid place-content-center lg:hidden sm:hidden">
