section tailor made done

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <img src="assets/google.png" />
                     <img src="assets/microsoft.png" />
                 </div>
-                <div class="flex gap-10 justify-center"> 
+                <div class="flex gap-10 justify-center my-[2em]">
                     <img src="assets/walmart.png" />
                     <img src="assets/fedex.png" />
                 </div>
@@ -169,8 +169,65 @@
             </div>
             <div class="bg-gray-500 w-[90%] h-[.1em] items-center"></div>
         </div>
-
         <!-- End section hero tablette -->
+
+        <!-- tailor made mobile and tablette -->
+        
+            <div class="flex flex-col justify-center items-center text-center gap-5">
+                <h1 class="font-bold text-3xl my-[1em]">Tailor-made <br /> features</h1>
+                <p>Lorem ipsum is common placeholder text used to demonstrate the graphic </br> elements of a document or visual presentation.</p>
+            </div>
+
+            <div class="grid sm:grid-cols md:grid-cols-2 lg:grid-cols-3">
+                <div class="flex flex-col justify-center items-center my-[3em]">
+                    <img src="assets/Base_feature_icon.png" />
+                    <div class="flex flex-col justify-center items-center text-center">
+                        <h1 class="font-bold text-3xl my-[1em]">Robust Workflow</h1>
+                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
+                    </div>
+                </div>
+
+                <div class="flex flex-col justify-center items-center my-[3em]">
+                    <img src="assets/Base_feature_icon_1.png" />
+                    <div class="flex flex-col justify-center items-center text-center">
+                        <h1 class="font-bold text-3xl my-[1em]">Flexibility</h1>
+                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
+                    </div>
+                </div>
+
+                <div class="flex flex-col justify-center items-center my-[3em]">
+                    <img src="assets/Base_feature_icon_2.png" />
+                    <div class="flex flex-col justify-center items-center text-center">
+                        <h1 class="font-bold text-3xl my-[1em]">User friendly</h1>
+                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
+                    </div>
+                </div>
+
+                <div class="flex flex-col justify-center items-center my-[3em]">
+                    <img src="assets/Base_feature_icon_3.png" />
+                    <div class="flex flex-col justify-center items-center text-center">
+                        <h1 class="font-bold text-3xl my-[1em]">Multiple Layout</h1>
+                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
+                    </div>
+                </div>
+
+                <div class="flex flex-col justify-center items-center my-[3em]">
+                    <img src="assets/Base_feature_icon_4.png" />
+                    <div class="flex flex-col justify-center items-center text-center">
+                        <h1 class="font-bold text-3xl my-[1em]">Better Components</h1>
+                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
+                    </div>
+                </div>
+
+                <div class="flex flex-col justify-center items-center my-[3em]">
+                    <img src="assets/Base_feature_icon_5.png" />
+                    <div class="flex flex-col justify-center items-center text-center">
+                        <h1 class="font-bold text-3xl my-[1em]">Well Organised</h1>
+                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
+                    </div>
+                </div>
+            </div>
+         <!-- tailor made mobile and tablette -->
 
     </main>
     <footer></footer>
