section tailor made done

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <body class="p-[1em]">
     <header>
-        <nav class="flex justify-between mb-[3em]">
-            <img src="assets/logo.png" />
+        <nav class="flex justify-between">
+            <img src="assets/logo.png" height="40"/>
 
             <!--Menu burguer pour mobile-->
             <div class="grid place-content-center lg:hidden sm:hidden">
@@ -22,7 +22,7 @@
             <!-- Menu burgueur pour tablette -->
             <div class="hidden md:flex md:justify-end md:gap-5 lg:hidden ">
                 <button class="bg-black p-[.5em] rounded-[5px] text-white items-center font-bold flex">
-                    <img src="assets/playstore.png" width="30" />
+                    <img src="assets/playstore.png" height="30" />
                     <div>
                         <p class="text-sm">GET IT ON</p>
                         <p>Google Play Store</p>
@@ -228,7 +228,11 @@
                 </div>
             </div>
          <!-- tailor made mobile and tablette -->
-
+            <!-- Real stories -->
+            <div class="bg-blue-300 grid grid-cols lg:hidden">
+                <div></div>
+            </div>
+            <!-- End Real stories -->
     </main>
     <footer></footer>
 
