section real stories done

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="p-[1em]">
-    <header>
+<body class="">
+    <header class="p-[1em]">
         <nav class="flex justify-between">
-            <img src="assets/logo.png" height="40"/>
+            <img src="assets/logo.png" height="40" />
 
             <!--Menu burguer pour mobile-->
             <div class="grid place-content-center lg:hidden sm:hidden">
@@ -172,67 +172,143 @@
         <!-- End section hero tablette -->
 
         <!-- tailor made mobile and tablette -->
-        
-            <div class="flex flex-col justify-center items-center text-center gap-5">
-                <h1 class="font-bold text-3xl my-[1em]">Tailor-made <br /> features</h1>
-                <p>Lorem ipsum is common placeholder text used to demonstrate the graphic </br> elements of a document or visual presentation.</p>
-            </div>
 
-            <div class="grid sm:grid-cols md:grid-cols-2 lg:grid-cols-3">
-                <div class="flex flex-col justify-center items-center my-[3em]">
-                    <img src="assets/Base_feature_icon.png" />
-                    <div class="flex flex-col justify-center items-center text-center">
-                        <h1 class="font-bold text-3xl my-[1em]">Robust Workflow</h1>
-                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
-                    </div>
-                </div>
+        <div class="flex flex-col justify-center items-center text-center gap-5">
+            <h1 class="font-bold text-3xl my-[1em]">Tailor-made <br /> features</h1>
+            <p>Lorem ipsum is common placeholder text used to demonstrate the graphic </br> elements of a document or
+                visual presentation.</p>
+        </div>
 
-                <div class="flex flex-col justify-center items-center my-[3em]">
-                    <img src="assets/Base_feature_icon_1.png" />
-                    <div class="flex flex-col justify-center items-center text-center">
-                        <h1 class="font-bold text-3xl my-[1em]">Flexibility</h1>
-                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
-                    </div>
-                </div>
-
-                <div class="flex flex-col justify-center items-center my-[3em]">
-                    <img src="assets/Base_feature_icon_2.png" />
-                    <div class="flex flex-col justify-center items-center text-center">
-                        <h1 class="font-bold text-3xl my-[1em]">User friendly</h1>
-                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
-                    </div>
-                </div>
-
-                <div class="flex flex-col justify-center items-center my-[3em]">
-                    <img src="assets/Base_feature_icon_3.png" />
-                    <div class="flex flex-col justify-center items-center text-center">
-                        <h1 class="font-bold text-3xl my-[1em]">Multiple Layout</h1>
-                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
-                    </div>
-                </div>
-
-                <div class="flex flex-col justify-center items-center my-[3em]">
-                    <img src="assets/Base_feature_icon_4.png" />
-                    <div class="flex flex-col justify-center items-center text-center">
-                        <h1 class="font-bold text-3xl my-[1em]">Better Components</h1>
-                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
-                    </div>
-                </div>
-
-                <div class="flex flex-col justify-center items-center my-[3em]">
-                    <img src="assets/Base_feature_icon_5.png" />
-                    <div class="flex flex-col justify-center items-center text-center">
-                        <h1 class="font-bold text-3xl my-[1em]">Well Organised</h1>
-                        <p> Lorem ipsum dolor sit amet,<br/> consecteur adipiscing elit.<br/> Set erat nibh tristique ipsum.</p>
-                    </div>
+        <div class="grid sm:grid-cols md:grid-cols-2 lg:grid-cols-3">
+            <div class="flex flex-col justify-center items-center my-[3em]">
+                <img src="assets/Base_feature_icon.png" />
+                <div class="flex flex-col justify-center items-center text-center">
+                    <h1 class="font-bold text-3xl my-[1em]">Robust Workflow</h1>
+                    <p> Lorem ipsum dolor sit amet,<br /> consecteur adipiscing elit.<br /> Set erat nibh tristique
+                        ipsum.</p>
                 </div>
             </div>
-         <!-- tailor made mobile and tablette -->
-            <!-- Real stories -->
-            <div class="bg-blue-300 grid grid-cols lg:hidden">
-                <div></div>
+
+            <div class="flex flex-col justify-center items-center my-[3em]">
+                <img src="assets/Base_feature_icon_1.png" />
+                <div class="flex flex-col justify-center items-center text-center">
+                    <h1 class="font-bold text-3xl my-[1em]">Flexibility</h1>
+                    <p> Lorem ipsum dolor sit amet,<br /> consecteur adipiscing elit.<br /> Set erat nibh tristique
+                        ipsum.</p>
+                </div>
             </div>
-            <!-- End Real stories -->
+
+            <div class="flex flex-col justify-center items-center my-[3em]">
+                <img src="assets/Base_feature_icon_2.png" />
+                <div class="flex flex-col justify-center items-center text-center">
+                    <h1 class="font-bold text-3xl my-[1em]">User friendly</h1>
+                    <p> Lorem ipsum dolor sit amet,<br /> consecteur adipiscing elit.<br /> Set erat nibh tristique
+                        ipsum.</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col justify-center items-center my-[3em]">
+                <img src="assets/Base_feature_icon_3.png" />
+                <div class="flex flex-col justify-center items-center text-center">
+                    <h1 class="font-bold text-3xl my-[1em]">Multiple Layout</h1>
+                    <p> Lorem ipsum dolor sit amet,<br /> consecteur adipiscing elit.<br /> Set erat nibh tristique
+                        ipsum.</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col justify-center items-center my-[3em]">
+                <img src="assets/Base_feature_icon_4.png" />
+                <div class="flex flex-col justify-center items-center text-center">
+                    <h1 class="font-bold text-3xl my-[1em]">Better Components</h1>
+                    <p> Lorem ipsum dolor sit amet,<br /> consecteur adipiscing elit.<br /> Set erat nibh tristique
+                        ipsum.</p>
+                </div>
+            </div>
+
+            <div class="flex flex-col justify-center items-center my-[3em]">
+                <img src="assets/Base_feature_icon_5.png" />
+                <div class="flex flex-col justify-center items-center text-center">
+                    <h1 class="font-bold text-3xl my-[1em]">Well Organised</h1>
+                    <p> Lorem ipsum dolor sit amet,<br /> consecteur adipiscing elit.<br /> Set erat nibh tristique
+                        ipsum.</p>
+                </div>
+            </div>
+        </div>
+        <!-- End tailor made mobile and tablette -->
+        <!-- Real stories mobile and tablette-->
+        <div class="bg-blue-300 grid grid-cols justify-items-center lg:hidden">
+            <h1 class="font-bold text-3xl my-[.5em]">Real stories from Real Customers</h1>
+            <p>Get inspired by these strories.</p>
+            <div class="bg-white my-[2em] w-[80%] rounded-[5px] p-[2em]">
+                <img src="assets/airbnb.png" />
+                <p class="mt-[2em]">I used landify and created a landing page for my startup within a week. The Landify
+                    UI Kit is simple and hihgly intuitive, so anyone can use it.</p>
+                <div class="mt-[1em]">
+                    <h3 class="font-bold">Jane Cooper</h3>
+                    <p>CEO, Airbnb</p>
+                </div>
+            </div>
+
+            <div class="bg-white my-[2em] w-[80%] rounded-[5px] p-[2em]">
+                <img src="assets/hubspot.png" />
+                <p class="mt-[2em]">To quicly start my startup landing page design, I was loocking for a landing page UI
+                    Kit. Landify is one of the best landing page UI Kit I have come across. It's so flexible, well
+                    organised and easily editable.</p>
+                <div class="mt-[1em]">
+                    <h3 class="font-bold">Floyd Miles</h3>
+                    <p>Vice President, GoPro</p>
+                </div>
+            </div>
+
+            <div class="bg-white my-[2em] w-[80%] rounded-[5px] p-[2em]">
+                <img src="assets/strapi.png" />
+                <p class="mt-[2em]">Landify saved our time in designing my company page.</p>
+                <div class="mt-[1em]">
+                    <h3 class="font-bold">Kristin Watson</h3>
+                    <p>Co-fondateur, Strapi</p>
+                </div>
+            </div>
+        </div>
+        <!-- End Real stories mobile and tablette-->
+        <!-- Real stories desktop-->
+        <div class="hidden lg:flex bg-blue-300 w-full justify-between p-[4em]">
+            <div>
+                <h1 class="font-bold text-3xl my-[.5em]">Real stories from Real Customers</h1>
+                <p>Get inspired by these strories.</p>
+                <div class="bg-white my-[2em] w-[80%] rounded-[5px] p-[2em]">
+                    <img src="assets/airbnb.png" />
+                    <p class="mt-[2em]">I used landify and created a landing page for my startup within a week. The
+                        Landify UI Kit is simple and hihgly intuitive, so anyone can use it.</p>
+                    <div class="mt-[1em]">
+                        <h3 class="font-bold">Jane Cooper</h3>
+                        <p>CEO, Airbnb</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="bg-white my-[2em] w-[80%] rounded-[5px] p-[2em]">
+                    <img src="assets/hubspot.png" />
+                    <p class="mt-[2em]">To quicly start my startup landing page design, I was loocking for a landing
+                        page UI Kit. Landify is one of the best landing page UI Kit I have come across. It's so
+                        flexible, well organised and easily editable.</p>
+                    <div class="mt-[1em]">
+                        <h3 class="font-bold">Floyd Miles</h3>
+                        <p>Vice President, GoPro</p>
+                    </div>
+                </div>
+
+                <div class="bg-white my-[2em] w-[70%] rounded-[5px] p-[2em]">
+                    <img src="assets/strapi.png" />
+                    <p class="mt-[2em]">Landify saved our time in designing my company page.</p>
+                    <div class="mt-[1em]">
+                        <h3 class="font-bold">Kristin Watson</h3>
+                        <p>Co-fondateur, Strapi</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Real stories desktop-->
+
     </main>
     <footer></footer>
 
