--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
         <!-- Section hero desktop -->
         <div class="hidden lg:block">
 
-            <div class="flex justify-between mx-[3em]">
+            <div class="flex justify-between pt-[10em] px-[4em] pr-[5em] lg:bg-[url('/assets/background_desktop.png')]">
                 <div class="mt-[5em]">
-                    <h1 class="font-bold text-3xl"> The easiest way to manage projects</h1>
-                    <p class="my-[1em]">From the small stuff to the big picture, organizes the work so teams know what
+                    <h1 class="font-bold text-3xl"> The easiest way to <br/> manage projects</h1>
+                    <p class="my-[1em]">From the small stuff to the big picture, organizes the work so teams know <br/> what
                         to
                         do,
                         why it matters, and how to get it done.
