--- a/index.html
+++ b/index.html
@@ -81,22 +81,20 @@
         </nav>
     </header>
     <main>
-        <!-- section hero du mobile and desktop-->
-        <div class="lg:hidden">
-            <div class="">
+        <!-- section hero du mobile and tab-->
+        <div class="lg:hidden px-[2em] md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')]">
                 <h1 class="font-bold text-3xl"> The easiest way to manage projects</h1>
-                <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know what to
+                <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know <br/> what to
                     do,
                     why it matters, and how to get it done.
                 </p>
                 <div class="flex justify-between w-[20em]">
                     <button class="bg-red-500 text-white p-[.7em] rounded-[.3em] font-bold">Get Started</button>
-                    <button class="text-orange-600 font-bold">Watch video</button>
+                    <button class="text-orange-600 font-bold pr-[3em]">Watch video</button>
                 </div>
-            </div>
 
 
-            <div class="my-[4em] flex justify-center">
+            <div class="my-[4em] flex justify-center pt-[3em]">
                 <img src="assets/Mobile.png" />
             </div>
             <div class="bg-gray-500 w-[90%] h-[.1em] items-center"></div>
@@ -169,7 +167,7 @@
             </div>
             <div class="bg-gray-500 w-[90%] h-[.1em] items-center"></div>
         </div>
-        <!-- End section hero tablette -->
+        <!-- End section hero desktop -->
 
         <!-- tailor made mobile and tablette -->
 
