--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </header>
     <main>
         <!-- section hero du mobile and tab-->
-        <div class="lg:hidden px-[2em] md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')]">
+        <div class="lg:hidden  md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')]">
                 <h1 class="font-bold text-3xl"> The easiest way to manage projects</h1>
                 <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know <br/> what to
                     do,
@@ -97,7 +97,7 @@
             <div class="my-[4em] flex justify-center pt-[3em]">
                 <img src="assets/Mobile.png" />
             </div>
-            <div class="bg-gray-500 w-[90%] h-[.1em] items-center"></div>
+            <div class="bg-gray-500 w-[90%] mx-auto h-[.1em] items-center"></div>
             <!-- mobile -->
             <div class="md:hidden lg:hidden">
                 <div class="mx-[2em]">
@@ -119,7 +119,7 @@
 
             <!-- Tablette -->
             <div class="hidden md:block">
-                <div class="flex justify-between my-[2em] justify-center">
+                <div class="flex justify-between my-[2em] justify-center px-[3em]">
                     <img src="assets/airbnb.png" />
                     <img src="assets/hubspot.png" />
                     <img src="assets/google.png" />
@@ -130,15 +130,12 @@
                     <img src="assets/fedex.png" />
                 </div>
             </div>
-
-            <div class="bg-gray-500 w-[90%] h-[.1em] items-center"></div>
-
+            <div class="bg-gray-500 w-[90%] mx-auto h-[.1em] items-center m"></div>
         </div>
         <!-- End section hero mobile and tablette -->
 
         <!-- Section hero desktop -->
         <div class="hidden lg:block">
-
             <div class="flex justify-between pt-[10em] px-[4em] pr-[5em] bg-[url('/assets/background_desktop.png')]">
                 <div class="mt-[5em]">
                     <h1 class="font-bold text-3xl"> The easiest way to <br/> manage projects</h1>
@@ -156,7 +153,7 @@
                     <img src="assets/Mobile.png" />
                 </div>
             </div>
-            <div class="bg-gray-500 w-[90%] h-[.1em]"></div>
+            <div class="bg-gray-500 w-[90%] mx-auto h-[.1em]"></div>
             <div class="flex justify-between mx-[4em] my-[2em]">
                 <img src="assets/airbnb.png" />
                 <img src="assets/hubspot.png" />
@@ -165,7 +162,7 @@
                 <img src="assets/walmart.png" />
                 <img src="assets/fedex.png" />
             </div>
-            <div class="bg-gray-500 w-[90%] h-[.1em] items-center"></div>
+            <div class="bg-gray-500 w-[90%] mx-auto h-[.1em]"></div>
         </div>
         <!-- End section hero desktop -->
 
@@ -306,6 +303,12 @@
             </div>
         </div>
         <!-- End Real stories desktop-->
+        <!-- Our 18 years -->
+        <div>
+            <h1>Our 18 years of achievments</h1>
+            <p>With our super powers we have reached this</p>
+        </div>
+        <!-- Our 18 years -->
 
     </main>
     <footer></footer>
