--- a/index.html
+++ b/index.html
@@ -304,11 +304,44 @@
         </div>
         <!-- End Real stories desktop-->
         <!-- Our 18 years -->
-        <div>
-            <h1>Our 18 years of achievments</h1>
+        <div class="px-[3em]">
+            <h1 class="font-bold text-3xl ">Our 18 years of achievements</h1>
             <p>With our super powers we have reached this</p>
+            <div>
+                <div class="flex gap-5">
+                    <img src="assets/Base_feature_icon.png"/>
+                    <div>
+                        <p class="font-bold ">10,000+</p>
+                        <p>Downloads per day</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-5">
+                    <img src="assets/Base_feature_icon_1.png"/>
+                    <div>
+                        <p class="font-bold">2 Million</p>
+                        <p>Users</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-5">
+                    <img src="assets/Base_feature_icon_2.png"/>
+                    <div>
+                        <p class="font-bold">500+</p>
+                        <p>Clients</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-5">
+                    <img src="assets/Base_feature_icon_3.png"/>
+                    <div>
+                        <p class="font-bold">140</p>
+                        <p>Countries</p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <!-- Our 18 years -->
+        <!-- End our 18 years -->
 
     </main>
     <footer></footer>
