--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </header>
     <main>
         <!-- section hero du mobile and tab-->
-        <div class="lg:hidden  md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')]">
+        <div class="lg:hidden  md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')] px-[3em]">
                 <h1 class="font-bold text-3xl"> The easiest way to manage projects</h1>
                 <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know <br/> what to
                     do,
