--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     </header>
     <main>
         <!-- section hero du mobile and tab-->
-        <div class="lg:hidden  md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')] px-[3em]">
-                <h1 class="font-bold text-3xl"> The easiest way to manage projects</h1>
+        <div class="lg:hidden  md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')] px-[1em]">
+                <h1 class="font-bold text-[45px]"> The easiest way to <br class="md:hidden"/> manage projects</h1>
                 <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know <br/> what to
                     do,
                     why it matters, and how to get it done.
@@ -303,12 +303,13 @@
             </div>
         </div>
         <!-- End Real stories desktop-->
-        <!-- Our 18 years -->
-        <div class="px-[3em]">
+        <!-- Our 18 years tab and mobile-->
+        <div class="px-[3em] grid my-[3em] lg:hidden">
             <h1 class="font-bold text-3xl ">Our 18 years of achievements</h1>
             <p>With our super powers we have reached this</p>
-            <div>
-                <div class="flex gap-5">
+            <div class="grid sm:grid-cols md:grid-cols-2 gap-10 my-[3em] lg:grid-cols-2">
+
+                <div class="flex gap-5 items-center">
                     <img src="assets/Base_feature_icon.png"/>
                     <div>
                         <p class="font-bold ">10,000+</p>
@@ -316,7 +317,7 @@
                     </div>
                 </div>
 
-                <div class="flex gap-5">
+                <div class="flex gap-5 items-center">
                     <img src="assets/Base_feature_icon_1.png"/>
                     <div>
                         <p class="font-bold">2 Million</p>
@@ -324,7 +325,7 @@
                     </div>
                 </div>
 
-                <div class="flex gap-5">
+                <div class="flex gap-5 items-center">
                     <img src="assets/Base_feature_icon_2.png"/>
                     <div>
                         <p class="font-bold">500+</p>
@@ -332,7 +333,7 @@
                     </div>
                 </div>
 
-                <div class="flex gap-5">
+                <div class="flex gap-5 items-center">
                     <img src="assets/Base_feature_icon_3.png"/>
                     <div>
                         <p class="font-bold">140</p>
@@ -341,7 +342,49 @@
                 </div>
             </div>
         </div>
-        <!-- End our 18 years -->
+        <!-- End our 18 years tab and mobile-->
+         <!-- Our 18 years desktop-->
+         <div class="hidden lg:grid lg:grid-cols-2 lg:justify-items-between m-[3em] align-items-center">
+           <div>
+            <h1 class="font-bold text-3xl ">Our 18 years of <br/> achievements</h1>
+            <p>With our super powers we have reached this</p>
+           </div>
+            <div class="grid grid-cols-2 align-items-center gap-10">
+
+                <div class="flex gap-5 items-center">
+                    <img src="assets/Base_feature_icon.png"/>
+                    <div>
+                        <p class="font-bold ">10,000+</p>
+                        <p>Downloads per day</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-5 items-center">
+                    <img src="assets/Base_feature_icon_1.png"/>
+                    <div>
+                        <p class="font-bold">2 Million</p>
+                        <p>Users</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-5 items-center">
+                    <img src="assets/Base_feature_icon_2.png"/>
+                    <div>
+                        <p class="font-bold">500+</p>
+                        <p>Clients</p>
+                    </div>
+                </div>
+
+                <div class="flex gap-5 items-center">
+                    <img src="assets/Base_feature_icon_3.png"/>
+                    <div>
+                        <p class="font-bold">140</p>
+                        <p>Countries</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End our 18 years desktop-->
 
     </main>
     <footer></footer>
