--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
     <main>
         <!-- section hero du mobile and tab-->
         <div class="lg:hidden  md:py-[7em] md:pt-[10em] md:bg-[url('/assets/background_Tab.png')] px-[1em]">
-                <h1 class="font-bold text-[45px]"> The easiest way to <br class="md:hidden"/> manage projects</h1>
-                <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know <br/> what to
-                    do,
-                    why it matters, and how to get it done.
-                </p>
-                <div class="flex justify-between w-[20em]">
-                    <button class="bg-red-500 text-white p-[.7em] rounded-[.3em] font-bold">Get Started</button>
-                    <button class="text-orange-600 font-bold pr-[3em]">Watch video</button>
-                </div>
+            <h1 class="font-bold text-[45px]"> The easiest way to <br class="md:hidden" /> manage projects</h1>
+            <p class="my-[2em]">From the small stuff to the big picture, organizes the work so teams know <br /> what to
+                do,
+                why it matters, and how to get it done.
+            </p>
+            <div class="flex justify-between w-[20em]">
+                <button class="bg-red-500 text-white p-[.7em] rounded-[.3em] font-bold">Get Started</button>
+                <button class="text-orange-600 font-bold pr-[3em]">Watch video</button>
+            </div>
 
 
             <div class="my-[4em] flex justify-center pt-[3em]">
@@ -138,8 +138,9 @@
         <div class="hidden lg:block">
             <div class="flex justify-between pt-[10em] px-[4em] pr-[5em] bg-[url('/assets/background_desktop.png')]">
                 <div class="mt-[5em]">
-                    <h1 class="font-bold text-3xl"> The easiest way to <br/> manage projects</h1>
-                    <p class="my-[1em]">From the small stuff to the big picture, organizes the work so teams know <br/> what
+                    <h1 class="font-bold text-3xl"> The easiest way to <br /> manage projects</h1>
+                    <p class="my-[1em]">From the small stuff to the big picture, organizes the work so teams know <br />
+                        what
                         to
                         do,
                         why it matters, and how to get it done.
@@ -310,7 +311,7 @@
             <div class="grid sm:grid-cols md:grid-cols-2 gap-10 my-[3em] lg:grid-cols-2">
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon.png"/>
+                    <img src="assets/Base_feature_icon.png" />
                     <div>
                         <p class="font-bold ">10,000+</p>
                         <p>Downloads per day</p>
@@ -318,7 +319,7 @@
                 </div>
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon_1.png"/>
+                    <img src="assets/Base_feature_icon_1.png" />
                     <div>
                         <p class="font-bold">2 Million</p>
                         <p>Users</p>
@@ -326,7 +327,7 @@
                 </div>
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon_2.png"/>
+                    <img src="assets/Base_feature_icon_2.png" />
                     <div>
                         <p class="font-bold">500+</p>
                         <p>Clients</p>
@@ -334,7 +335,7 @@
                 </div>
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon_3.png"/>
+                    <img src="assets/Base_feature_icon_3.png" />
                     <div>
                         <p class="font-bold">140</p>
                         <p>Countries</p>
@@ -343,16 +344,16 @@
             </div>
         </div>
         <!-- End our 18 years tab and mobile-->
-         <!-- Our 18 years desktop-->
-         <div class="hidden lg:grid lg:grid-cols-2 lg:justify-items-between m-[3em] align-items-center">
-           <div>
-            <h1 class="font-bold text-3xl ">Our 18 years of <br/> achievements</h1>
-            <p>With our super powers we have reached this</p>
-           </div>
+        <!-- Our 18 years desktop-->
+        <div class="hidden lg:grid lg:grid-cols-2 lg:justify-items-between m-[3em] align-items-center">
+            <div>
+                <h1 class="font-bold text-3xl ">Our 18 years of <br /> achievements</h1>
+                <p>With our super powers we have reached this</p>
+            </div>
             <div class="grid grid-cols-2 align-items-center gap-10">
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon.png"/>
+                    <img src="assets/Base_feature_icon.png" />
                     <div>
                         <p class="font-bold ">10,000+</p>
                         <p>Downloads per day</p>
@@ -360,7 +361,7 @@
                 </div>
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon_1.png"/>
+                    <img src="assets/Base_feature_icon_1.png" />
                     <div>
                         <p class="font-bold">2 Million</p>
                         <p>Users</p>
@@ -368,7 +369,7 @@
                 </div>
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon_2.png"/>
+                    <img src="assets/Base_feature_icon_2.png" />
                     <div>
                         <p class="font-bold">500+</p>
                         <p>Clients</p>
@@ -376,7 +377,7 @@
                 </div>
 
                 <div class="flex gap-5 items-center">
-                    <img src="assets/Base_feature_icon_3.png"/>
+                    <img src="assets/Base_feature_icon_3.png" />
                     <div>
                         <p class="font-bold">140</p>
                         <p>Countries</p>
@@ -385,6 +386,77 @@
             </div>
         </div>
         <!-- End our 18 years desktop-->
+
+        <!-- Easy integration -->
+        <div
+            class="grid md:grid-cols-2 sm:grid-cols justify-items-between align-items-center px-[3em] gap-10 align-items-center">
+            <div>
+                <h1 class="font-bold">Easy integrations with <br /> 170+ tools</h1>
+                <p class="lg:hidden md:hidden">Connect Landy with your favorite tools <br /> that you use daily and keep
+                    things on track.</p>
+                <p class="hidden lg:hidden md:block">Connect Landy with your favorite <br /> tools that you use daily
+                    and keep <br /> things on track.</p>
+                <p class="hidden lg:block">Connect Landy with your favorite tools that you use <br /> daily and keep
+                    things on track.</p>
+            </div>
+            <div class="flex justify-center rounded-full">
+                <div class="bg-gray-300 h-full">
+                    <div class="flex justify-between">
+                        <img src="assets/smiley.png" />
+                        <img src="assets/slack.png" />
+                        <img src="assets/parassol.png" />
+                        <img src="assets/monkey.png" />
+                    </div>
+                    <div class="flex gap-5 justify-center">
+                        <img src="assets/dropbox.png" />
+                        <img src="assets/monkey.png" />
+                        <img src="assets/fusee.png" />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End easy integration -->
+
+        <!-- Manage all projects -->
+        <div class="bg-blue-500 px-[3em] grid sm:grid-cols lg:grid-cols-2">
+            <div class="py-[3em]">
+                <div>
+                    <h1 class="font-bold text-3xl">Manage all projects from your mobile</h1>
+                    <p>Download the app to manage your projects, keep track of the progress and complete tasks without
+                        procastinating. Stay on track and complete on time!</p>
+                </div>
+                <div class="my-[2em]">
+                    <h2 class="font-bold">Get the App</h2>
+                    <div class="flex gap-5 my-[2em]">
+                        <button class="bg-black rounded-[5px] text-white items-center font-bold flex">
+                            <img src="assets/playstore.png" height="30" />
+                            <div>
+                                <p class="text-sm">GET IT ON</p>
+                                <p>Google Play Store</p>
+                            </div>
+                        </button>
+                        <button
+                            class="bg-black p-[.5em] rounded-[5px] text-white items-center mr-[.5em] font-bold flex gap-[.3em]">
+                            <img src="assets/logo-apple.png" width="30" />
+                            <div>
+                                <p class="text-sm">DOWNLOAD ON THE</p>
+                                <p>App Store</p>
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div  class="grid sm:grid-cols md:grid-cols-2 ">
+                <div>
+                    <img src="assets/Phone1.png"/>
+                </div>
+                <div class="md:pt-[11em]">
+                    <img src="assets/Phone2.png"/>
+                </div>
+            </div>
+
+        </div>
+        <!-- End Manage all projects -->
 
     </main>
     <footer></footer>
