--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img src="assets/logo.png" height="40" />
 
             <!--Menu burguer pour mobile-->
-            <div class="grid place-content-center lg:hidden sm:hidden">
+            <div class="grid place-content-center lg:hidden sm:hidden bg-[url('/asstets/background_mobile.png')]">
                 <div
                     class="w-12 h-1 bg-black rounded-full before:content-[''] before:absolute before:w-12 before:h-1 before:bg-black before:rounded-full before:-translate-y-3
                     after:content-[''] after:absolute after:w-12 after:h-1 after:bg-black after:rounded-full after:-translate-y-3 before:-translate-y-2 after:translate-y-3">
@@ -90,7 +90,13 @@
             </p>
             <div class="flex justify-between w-[20em]">
                 <button class="bg-red-500 text-white p-[.7em] rounded-[.3em] font-bold">Get Started</button>
-                <button class="text-orange-600 font-bold pr-[3em]">Watch video</button>
+                <button class="text-orange-600 font-bold pr-[3em] flex gap-5 items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                        <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
+                      </svg>
+                    Watch video
+                </button>
             </div>
 
 
@@ -145,9 +151,15 @@
                         do,
                         why it matters, and how to get it done.
                     </p>
-                    <div class="flex justify-between w-[15em]">
+                    <div class="flex gap-10">
                         <button class="bg-red-500 text-white p-[.7em] rounded-[.3em] font-bold">Get Started</button>
-                        <button class="text-orange-600 font-bold">Watch video</button>
+                        <button class="text-orange-600 font-bold justify-between flex gap-5 items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
+                              </svg>
+                            Watch video
+                        </button>
                     </div>
                 </div>
                 <div>
@@ -446,12 +458,12 @@
                     </div>
                 </div>
             </div>
-            <div  class="grid sm:grid-cols md:grid-cols-2 ">
+            <div class="grid sm:grid-cols md:grid-cols-2 ">
                 <div>
-                    <img src="assets/Phone1.png"/>
+                    <img src="assets/Phone1.png" />
                 </div>
                 <div class="md:pt-[11em]">
-                    <img src="assets/Phone2.png"/>
+                    <img src="assets/Phone2.png" />
                 </div>
             </div>
 
@@ -459,7 +471,39 @@
         <!-- End Manage all projects -->
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="p-[3em] bg-black">
+            <div>
+                <img src="assets/logo.png"/>
+                <ul class="text-white flex gap-5 py-[1em]">
+                    <li><a href="#">Download Now</a></li>
+                    <li><a href="#">Licence</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">News</a></li>
+                </ul>
+            </div>
+            <div>
+                <h1>Get the App</h1>
+                <button class="bg-black rounded-[5px] text-white items-center font-bold flex">
+                    <img src="assets/playstore.png" height="30" />
+                    <div>
+                        <p class="text-sm">GET IT ON</p>
+                        <p>Google Play Store</p>
+                    </div>
+                </button>
+                <button
+                    class="bg-black p-[.5em] rounded-[5px] text-white items-center mr-[.5em] font-bold flex gap-[.3em]">
+                    <img src="assets/logo-apple.png" width="30" />
+                    <div>
+                        <p class="text-sm">DOWNLOAD ON THE</p>
+                        <p>App Store</p>
+                    </div>
+                </button>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
