--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
             <div class="flex justify-between w-[20em]">
                 <button class="bg-red-500 text-white p-[.7em] rounded-[.3em] font-bold">Get Started</button>
                 <button class="text-orange-600 font-bold pr-[3em] flex gap-5 items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
-                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                        <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor"
+                        class="bi bi-play-circle" viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                        <path
+                            d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z" />
+                    </svg>
                     Watch video
                 </button>
             </div>
@@ -154,10 +156,12 @@
                     <div class="flex gap-10">
                         <button class="bg-red-500 text-white p-[.7em] rounded-[.3em] font-bold">Get Started</button>
                         <button class="text-orange-600 font-bold justify-between flex gap-5 items-center">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
-                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                                <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
-                              </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="16" fill="currentColor"
+                                class="bi bi-play-circle" viewBox="0 0 16 16">
+                                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                <path
+                                    d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z" />
+                            </svg>
                             Watch video
                         </button>
                     </div>
@@ -472,9 +476,9 @@
 
     </main>
     <footer>
-        <div class="p-[3em] bg-black">
+        <div class="p-[3em] bg-black md:flex md:justify-between text-white">
             <div>
-                <img src="assets/logo.png"/>
+                <img src="assets/logo.png" />
                 <ul class="text-white flex gap-5 py-[1em]">
                     <li><a href="#">Download Now</a></li>
                     <li><a href="#">Licence</a></li>
@@ -483,24 +487,27 @@
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">News</a></li>
                 </ul>
+                <p> @ 2023 Sevan 241 Business. All rightd reserved</p>
             </div>
             <div>
                 <h1>Get the App</h1>
-                <button class="bg-black rounded-[5px] text-white items-center font-bold flex">
-                    <img src="assets/playstore.png" height="30" />
-                    <div>
-                        <p class="text-sm">GET IT ON</p>
-                        <p>Google Play Store</p>
-                    </div>
-                </button>
-                <button
-                    class="bg-black p-[.5em] rounded-[5px] text-white items-center mr-[.5em] font-bold flex gap-[.3em]">
-                    <img src="assets/logo-apple.png" width="30" />
-                    <div>
-                        <p class="text-sm">DOWNLOAD ON THE</p>
-                        <p>App Store</p>
-                    </div>
-                </button>
+                <div class="py-[2em]">
+                    <button class="bg-black rounded-[5px] px-[.2em] text-white items-center font-bold flex border-2 border-white">
+                        <img src="assets/playstore.png" height="30" />
+                        <div>
+                            <p class="text-sm">GET IT ON</p>
+                            <p>Google Play Store</p>
+                        </div>
+                    </button>
+                    <button
+                        class="bg-black p-[.5em] rounded-[5px] text-white items-center mr-[.5em] font-bold border-2 border-white flex gap-[.3em] mt-[1em]">
+                        <img src="assets/logo-apple.png" width="30" />
+                        <div>
+                            <p class="text-sm">DOWNLOAD ON THE</p>
+                            <p>App Store</p>
+                        </div>
+                    </button>
+                </div>
             </div>
         </div>
     </footer>
