footer mobile done

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         <div class="p-[3em] bg-black md:flex md:justify-between text-white">
             <div>
                 <img src="assets/logo.png" />
-                <ul class="text-white flex gap-5 py-[1em]">
+                <ul class="hidden text-white lg:flex gap-5 py-[1em]">
                     <li><a href="#">Download Now</a></li>
                     <li><a href="#">Licence</a></li>
                     <li><a href="#">About</a></li>
@@ -487,9 +487,25 @@
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">News</a></li>
                 </ul>
+                <div class="flex flex-col gap-5 my-[3em] lg:hidden md:hidden">
+                    <ul class="flex gap-10">
+                        <li><a href="#">Download Now</a></li>
+                        <li><a href="#">Licence</a></li>
+                    </ul>
+                    <ul class="flex gap-10">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">News</a></li>
+                    </ul>
+                    <ul class="flex gap-10">
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
                 <p> @ 2023 Sevan 241 Business. All rightd reserved</p>
             </div>
-            <div>
+            <div class="sm:my-[3em]">
                 <h1>Get the App</h1>
                 <div class="py-[2em]">
                     <button class="bg-black rounded-[5px] px-[.2em] text-white items-center font-bold flex border-2 border-white">
