footer tab done

--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
                     <li><a href="#">Pricing</a></li>
                     <li><a href="#">News</a></li>
                 </ul>
+                <!-- link mobile -->
                 <div class="flex flex-col gap-5 my-[3em] lg:hidden md:hidden">
                     <ul class="flex gap-10">
                         <li><a href="#">Download Now</a></li>
@@ -503,12 +504,29 @@
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
+                <!-- link tab -->
+                <div class="md:flex md:flex-col md:justify-between md:gap-5 my-[1em] hidden lg:hidden">
+                    <ul class="flex gap-10">
+                        <li><a href="#">Download Now</a></li>
+                        <li><a href="#">Licence</a></li>
+                    </ul>
+                    <ul class="flex gap-5">
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">News</a></li>
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+
                 <p> @ 2023 Sevan 241 Business. All rightd reserved</p>
             </div>
             <div class="sm:my-[3em]">
                 <h1>Get the App</h1>
                 <div class="py-[2em]">
-                    <button class="bg-black rounded-[5px] px-[.2em] text-white items-center font-bold flex border-2 border-white">
+                    <button
+                        class="bg-black rounded-[5px] px-[.2em] text-white items-center font-bold flex border-2 border-white">
                         <img src="assets/playstore.png" height="30" />
                         <div>
                             <p class="text-sm">GET IT ON</p>
