circle icons done

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
 
         <!-- Easy integration -->
         <div
-            class="grid md:grid-cols-2 sm:grid-cols justify-items-between align-items-center px-[3em] gap-10 align-items-center">
+            class="grid md:grid-cols-2 sm:grid-cols justify-items-between align-items-center px-[3em] gap-10 align-items-center py-[3em]">
             <div>
                 <h1 class="font-bold">Easy integrations with <br /> 170+ tools</h1>
                 <p class="lg:hidden md:hidden">Connect Landy with your favorite tools <br /> that you use daily and keep
@@ -416,17 +416,17 @@
                     things on track.</p>
             </div>
             <div class="flex justify-center rounded-full">
-                <div class="bg-gray-300 h-full">
-                    <div class="flex justify-between">
-                        <img src="assets/smiley.png" />
-                        <img src="assets/slack.png" />
-                        <img src="assets/parassol.png" />
-                        <img src="assets/monkey.png" />
+                <div class="bg-gray-300 h-full rounded-bl-[100px] rounded-br-[100px] lg:w-[65%]">
+                    <div class="flex justify-between px-[.5em]">
+                        <img src="assets/smiley.png" width="60"/>
+                        <img src="assets/slack.png" width="60"/>
+                        <img src="assets/parassol.png" width="60"/>
+                        <img src="assets/monkey.png" width="60"/>
                     </div>
-                    <div class="flex gap-5 justify-center">
-                        <img src="assets/dropbox.png" />
-                        <img src="assets/monkey.png" />
-                        <img src="assets/fusee.png" />
+                    <div class="flex gap-5 justify-center px-[1em]">
+                        <img src="assets/dropbox.png" width="60"/>
+                        <img src="assets/monkey.png" width="60"/>
+                        <img src="assets/fusee.png" width="60"/>
                     </div>
                 </div>
             </div>
@@ -479,7 +479,7 @@
         <div class="p-[3em] bg-black md:flex md:justify-between text-white">
             <div>
                 <img src="assets/logo.png" />
-                <ul class="hidden text-white lg:flex gap-5 py-[1em]">
+                <ul class="hidden text-white lg:flex gap-5 p-[1em]">
                     <li><a href="#">Download Now</a></li>
                     <li><a href="#">Licence</a></li>
                     <li><a href="#">About</a></li>
